--- a/pydashie/templates/main.html
+++ b/pydashie/templates/main.html
@@ -9,11 +9,11 @@
   <title>{{title}}</title>
 
   <!-- The javascript and css are managed by sprockets. The files can be found in the /assets folder-->
-  <script type="text/javascript" src="/assets/application.js"></script>
-  <link rel="stylesheet" href="/assets/application.css">
+  <script type="text/javascript" src="/static/javascripts/application.js"></script>
+  <link rel="stylesheet" href="/static/stylesheets/application.css">
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="icon" href="/assets/images/favicon.ico">
+  <link rel="icon" href="/static/images/favicon.ico">
 
 </head>
   <body>
